Fixed Issue With Overflow

--- a/public/css/transfer.css
+++ b/public/css/transfer.css
@@ -15,7 +15,8 @@ html {
 
 body {
   font-size: 2rem;
-  padding: 2rem; }
+  padding: 2rem;
+  overflow-x: hidden; }
 
 a {
   color: #fff; }
