--- a/public/sass/base/base.scss
+++ b/public/sass/base/base.scss
@@ -19,6 +19,7 @@ html {
 body {
   font-size: 2rem;
   padding: 2rem;
+  overflow-x: hidden;
 }
 a {
   color: $base-color;
